--- a/bookmarks_main/templates/bookmarks_main/index.html
+++ b/bookmarks_main/templates/bookmarks_main/index.html
@@ -1,11 +1,31 @@
 {% extends './template.html' %}
 
 {% block content %}
-    <h2>Bookmarks</h2>
+
+    <div class="row ms-3">
+        {% if user.is_authenticated %}
+            <p class="fw-bold">Hi {{user}}.</p>
+        {% endif %}
+    </div>
+
+    <div class="row mb-3 ms-3">
+        <form method="post">
+            {% csrf_token %}
+                <div class="bg-light p-2 mt-3">
+                    <label class="form-label">Bookmark title</label>
+                    <input type="text" name="new_bookmark_title" class="form-control">
+                    <label class="form-label mt-1">Link</label>
+                    <input type="text" name="new_bookmark_address" class="form-control">
+                    <label class="form-label mt-1">Notes</label>
+                    <textarea name="new_bookmark_notes" rows="4" cols="28" class="form-control"></textarea>
+                    <!-- <input type="hidden" name="author"> -->
+                    <input class="btn btn-primary mt-3" type="submit" name="submit_new_bookmark" value="Submit">
+                </div>
+        </form>
+    </div>
 
     <div class="row m-3">
-        
-        <div class="col-lg-6">
+        {% if user.is_authenticated %}
             {% if bookmarks %}
                 {% for bookmark in bookmarks %}
                     <form method="post">
@@ -17,28 +37,18 @@
                             <div class="card-body">
                                 <p class="card-text">{{bookmark.bookmark_notes}}</p>
                                 <a href="https://{{bookmark.bookmark_address}}" class="card-link">{{bookmark.bookmark_address}}</a><br>
-                                <a href="{% url 'delete-bookmark' bookmark.id %}" style="color: white;" class="btn btn-danger mt-3">delete</a>
+                                <a href="{% url 'delete-bookmark' bookmark.id %}" style="color: white;" class="btn btn-danger mt-3">Delete</a>
                             </div>
                         </div>
                     </form>
                 {% endfor %}
             {% endif %}
-        </div>
-
-        <div class="col-lg-6">
-            <form method="post">
-                {% csrf_token %}
-                    <div class="bg-light p-2 mt-3">
-                        <label class="form-label">Bookmark title</label>
-                        <input type="text" name="new_bookmark_title" class="form-control">
-                        <label class="form-label mt-1">Link</label>
-                        <input type="text" name="new_bookmark_address" class="form-control">
-                        <label class="form-label mt-1">Notes</label>
-                        <textarea name="new_bookmark_notes" rows="4" cols="28" class="form-control"></textarea>
-                        <input class="btn btn-primary mt-3" type="submit" name="submit_new_bookmark" value="Submit">
-                    </div>
-            </form>
-        </div>
-    
     </div>
+    
+    {% else %}
+        <p class="text-danger">You must be logged in to see this content</p>
+    {% endif %}
+
+
+
 {% endblock %}
