--- a/bookmarks_main/templates/bookmarks_main/index.html
+++ b/bookmarks_main/templates/bookmarks_main/index.html
@@ -2,53 +2,58 @@
 
 {% block content %}
 
-    <div class="row ms-3">
-        {% if user.is_authenticated %}
-            <p class="fw-bold">Hi {{user}}.</p>
-        {% endif %}
-    </div>
+    <div class="row mb-3 d-flex justify-content-center">
 
-    <div class="row mb-3 ms-3">
-        <form method="post">
-            {% csrf_token %}
-                <div class="bg-light p-2 mt-3">
-                    <label class="form-label">Bookmark title</label>
-                    <input type="text" name="new_bookmark_title" class="form-control">
-                    <label class="form-label mt-1">Link</label>
-                    <input type="text" name="new_bookmark_address" class="form-control">
-                    <label class="form-label mt-1">Notes</label>
-                    <textarea name="new_bookmark_notes" rows="4" cols="28" class="form-control"></textarea>
-                    <!-- <input type="hidden" name="author"> -->
-                    <input class="btn btn-primary mt-3" type="submit" name="submit_new_bookmark" value="Submit">
-                </div>
-        </form>
-    </div>
+        <div class="col-lg-3 order-lg-2 ">
+            <form method="post">
+                {% csrf_token %}
+                    <div class="bg-light p-2 mt-3 border">
+                        <label class="form-label">Bookmark title</label>
+                        <input type="text" name="new_bookmark_title" class="form-control">
+                        <label class="form-label mt-1">Link</label>
+                        <input type="text" name="new_bookmark_address" class="form-control">
+                        <label class="form-label mt-1">Notes</label>
+                        <textarea name="new_bookmark_notes" rows="4" cols="28" class="form-control"></textarea>
+                        <!-- <input type="hidden" name="author"> -->
+                        <input class="btn btn-primary mt-3" type="submit" name="submit_new_bookmark" value="Submit">
+                    </div>
+            </form>
+        </div>
 
-    <div class="row m-3">
-        {% if user.is_authenticated %}
-            {% if bookmarks %}
-                {% for bookmark in bookmarks %}
-                    <form method="post">
-                        {% csrf_token %}
-                        <div class="card mt-3">
-                            <div class="card-header">
-                                <h5 class="card-title">{{bookmark.bookmark_title}}</h5>
+        <div class="col-lg-8 order-lg-1 ms-3">
+            {% if user.is_authenticated %}
+                {% if bookmarks %}
+                    {% for bookmark in bookmarks %}
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="row p-1 mt-3 bg-light d-flex align-items-center justify-content-center border">
+                                <div class="col">
+                                    <p class="card-title fw-bold">{{bookmark.bookmark_title}}</p>
+                                </div>
+                                <div class="col text-break overflow-scroll">
+                                    <p class="card-text fw-italic" style="max-height:50px;">{{bookmark.bookmark_notes}}</p>
+                                </div>
+                                <div class="col">
+                                    <a href="https://{{bookmark.bookmark_address}}" class="card-link">{{bookmark.bookmark_address}}</a><br>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'edit-bookmark' bookmark.id %}" class="text-success">Edit</a>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'delete-bookmark' bookmark.id %}" class="text-danger">Delete</a>
+                                </div>
                             </div>
-                            <div class="card-body">
-                                <p class="card-text">{{bookmark.bookmark_notes}}</p>
-                                <a href="https://{{bookmark.bookmark_address}}" class="card-link">{{bookmark.bookmark_address}}</a><br>
-                                <a href="{% url 'delete-bookmark' bookmark.id %}" style="color: white;" class="btn btn-danger mt-3">Delete</a>
-                            </div>
-                        </div>
-                    </form>
-                {% endfor %}
-            {% endif %}
+                        </form>
+                    {% endfor %}
+                {% endif %}
+        </div>
+
+        
+
     </div>
     
     {% else %}
         <p class="text-danger">You must be logged in to see this content</p>
     {% endif %}
-
-
 
 {% endblock %}
