--- a/bookmarks_main/templates/bookmarks_main/welcome.html
+++ b/bookmarks_main/templates/bookmarks_main/welcome.html
@@ -2,8 +2,12 @@
 
 {% block content %}
 
-<div class="container">
-	<h1>Welcome to Bookmarks.</h1>
-	<p>To get started just register or login!</p>
+<div class="container pt-3">
+	<div class="col d-flex justify-content-center">
+		<h1>Welcome to Bookmarks.</h1>
+	</div>
+	<div class="col d-flex justify-content-center">
+		<p>Login/Register to get started!</p>
+	</div>
 </div>
 {% endblock %}
