--- a/bookmarks_main/templates/bookmarks_main/edit.html
+++ b/bookmarks_main/templates/bookmarks_main/edit.html
@@ -12,16 +12,21 @@
 				Bookmark Title: <p class="text-success">{{bookmark_to_edit.bookmark_title}}</p>
 			{% endif %}
 		</div>
+		{% if post %}
+			<div class="alert alert-danger" role="alert">
+				There was an error with your form...
+		    </div>
+		{% endif %}
 		<div class="row">
 		    <form method="post">
 	            {% csrf_token %}
 	                <div class="bg-light p-2 mt-3 border">
 	                    <label class="form-label">Bookmark title</label>
-	                    <input type="text" name="new_bookmark_title" class="form-control">
+	                    <input type="text" name="new_bookmark_title" class="form-control" value={{bookmark_to_edit.bookmark_title}}>
 	                    <label class="form-label mt-1">Link</label>
-	                    <input type="text" name="new_bookmark_address" class="form-control">
+	                    <input type="text" name="new_bookmark_address" class="form-control" value={{bookmark_to_edit.bookmark_address}}>
 	                    <label class="form-label mt-1">Notes</label>
-	                    <textarea name="new_bookmark_notes" rows="4" cols="28" class="form-control"></textarea>
+	                    <textarea name="new_bookmark_notes" rows="4" cols="28" class="form-control">{{bookmark_to_edit.bookmark_notes}}</textarea>
 	                    <!-- <input type="hidden" name="author"> -->
 	                    <input class="btn btn-primary mt-3" type="submit" name="submit_edit_selected_bookmark" value="Submit">
 	                </div>
