--- a/bookmarks_main/templates/bookmarks_main/index.html
+++ b/bookmarks_main/templates/bookmarks_main/index.html
@@ -20,32 +20,33 @@
             </form>
         </div>
 
-        <div class="col-lg-8 order-lg-1 ms-3">
+        <div class="col-lg-8 order-lg-1 ms-3 me-3">
             {% if user.is_authenticated %}
-                {% if bookmarks %}
                     {% for bookmark in bookmarks %}
                         <form method="post">
                             {% csrf_token %}
-                            <div class="row p-1 mt-3 bg-light d-flex align-items-center justify-content-center border">
-                                <div class="col">
+                            <div class="row p-1 mt-3 bg-light d-flex align-items-center border">
+                                <div class="col-2">
                                     <p class="card-title fw-bold">{{bookmark.bookmark_title}}</p>
                                 </div>
-                                <div class="col text-break overflow-scroll">
-                                    <p class="card-text fw-italic" style="max-height:50px;">{{bookmark.bookmark_notes}}</p>
+                                <div class="col-md-4 text-break overflow-auto">
+                                    <p class="card-text" style="max-height:25px;">
+                                        <a href="{{bookmark.bookmark_address}}">{{bookmark.bookmark_address}}</a><br>
+                                    </p>
                                 </div>
-                                <div class="col">
-                                    <a href="https://{{bookmark.bookmark_address}}" class="card-link">{{bookmark.bookmark_address}}</a><br>
+                                <div class="col-md-4 text-break overflow-auto">
+                                    <p class="card-text" style="max-height:25px;">{{bookmark.bookmark_notes}}</p>
                                 </div>
-                                <div class="col">
-                                    <a href="{% url 'edit-bookmark' bookmark.id %}" class="text-success">Edit</a>
-                                </div>
-                                <div class="col">
+                                <div class="col-md-2">
+                                    <a href="{% url 'edit-bookmark' bookmark.id %}" class="text-success me-3">View</a>
                                     <a href="{% url 'delete-bookmark' bookmark.id %}" class="text-danger">Delete</a>
                                 </div>
+                                <!-- <div class="col-md-1">
+                                    <a href="{% url 'delete-bookmark' bookmark.id %}" class="text-danger">Delete</a>
+                                </div> -->
                             </div>
                         </form>
                     {% endfor %}
-                {% endif %}
         </div>
 
         
