--- a/bookmarks_main/templates/bookmarks_main/template.html
+++ b/bookmarks_main/templates/bookmarks_main/template.html
@@ -1,11 +1,12 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bookmarks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/9fe3012a5e.js" crossorigin="anonymous"></script>
   </head>
   <body class="m-3"> 
     <!-- style="background-image: url('data:image/../../images/cool-image.svg') -->
@@ -54,9 +55,9 @@
 
   </main>
 
-  <footer style="height: 250px;">
+<!--   <footer style="height: 250px;">
     
-  </footer>
+  </footer> -->
   
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
