--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -1,23 +1,24 @@
 {% extends 'bookmarks_main/template.html' %}
 
 {% block content %}
-	<h1>Login</h1>
-
-	<form action="" method=POST>
-		{% csrf_token %}
-
-		
-	  <div class="form-group">
-	    <label for="exampleInputEmail1">Username</label>
-	    <input type="text" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter usernmae">
-	  </div>
-	 	<div class="form-group">
-	    	<label for="exampleInputPassword1">Password</label>
-	    	<input type="password" class="form-control" name="password" placeholder="Enter password">
-	 	</div>
-	  
-	  <input type="submit" value="Submit" class="btn btn-secondary">
-
-	</form>
+	<h1 class="text-center">Login</h1><br>
+	<div class="row">
+		<div class="col-12 d-flex justify-content-center">
+			<form action="" method=POST>
+				{% csrf_token %}
+				  <div class="form-group">
+				    <!-- <label for="exampleInputEmail1">Username</label> -->
+				    <input type="text" class="form-control" name="username" placeholder="Enter Username"><br>
+				  </div>
+			 	<div class="form-group">
+			    	<!-- <label for="exampleInputPassword1">Password</label> -->
+			    	<input type="password" class="form-control" name="password" placeholder="Enter Password">
+			 	</div>
+			  <div class="d-flex justify-content-center mt-3">
+			  	<input type="submit" value="Submit" class="btn btn-secondary ">
+			  </div>
+			</form>
+		</div>
+	</div>
 
 {% endblock %}
