--- a/members/templates/authenticate/register_user.html
+++ b/members/templates/authenticate/register_user.html
@@ -8,15 +8,19 @@
     </div>
 {% endif %}
 
-	<h1>Register</h1>
+	<h1 class="text-center">Register</h1>
+	<div class="row">
+		<div class="col-12 d-flex justify-content-center">
+			<form action="{% url 'register_user' %}" method=POST>
+				{% csrf_token %}
 
-	<form action="{% url 'register_user' %}" method=POST>
-		{% csrf_token %}
+				{{ form.as_p }}
 
-		{{ form.as_p }}
-	
-		<input type="submit" value="Submit" class="btn btn-secondary">
-
-	</form>
+			  <div class="d-flex justify-content-center mt-3">
+			  	<input type="submit" value="Submit" class="btn btn-secondary ">
+			  </div>
+			</form>
+		</div>
+	</div>
 
 {% endblock %}
