--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -15,7 +15,7 @@
 			    	<input type="password" class="form-control" name="password" placeholder="Enter Password">
 			 	</div>
 			  <div class="d-flex justify-content-center mt-3">
-			  	<input type="submit" value="Submit" class="btn btn-secondary ">
+			  	<input type="submit" value="Login" class="btn btn-secondary ">
 			  </div>
 			</form>
 		</div>
